<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context="com.example.villagetravel.EditUser">

    <TextView
        android:id="@+id/header1"
        android:layout_width="210dp"
        android:layout_height="34dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:text="@string/header1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="71dp"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/Email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnameinput" />

    <TextView
        android:id="@+id/passinput"
        android:layout_width="127dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <TextView
        android:id="@+id/Lastname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="12dp"
        android:text="@string/Lastname1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eduser" />

    <Button
        android:id="@+id/d65btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/back"
        android:text="@string/d65btn"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/buttonsub"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityInput" />

    <EditText
        android:id="@+id/Lname"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:ems="10"
        android:hint="@string/Lname"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lastname1" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="123dp"
        android:layout_height="27dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/Phone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/cityIn"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/passwordinput" />

    <Button
        android:id="@+id/edsearch"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="#2196F3"
        android:text="@string/edsearch"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toEndOf="@+id/eduser"
        app:layout_constraintTop_toBottomOf="@+id/header1" />

    <TextView
        android:id="@+id/city"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/city"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passinput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/emailInput"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Lname" />

    <EditText
        android:id="@+id/eduser"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/eduser"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header1" />

    <EditText
        android:id="@+id/phoneinput"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phoneinput"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Phone"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/buttonsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/back"
        android:text="@string/buttonsub"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityInput" />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/passwordinput"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/passinput"
        app:layout_constraintTop_toBottomOf="@+id/phoneinput" />

    <EditText
        android:id="@+id/fnameinput"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:ems="10"
        android:hint="@string/fnameinput"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fname1" />

    <TextView
        android:id="@+id/Fname1"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/Fname1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eduser" />


</androidx.constraintlayout.widget.ConstraintLayout>